# n2o-emissions-africa-ml

./: .gitignore  .gitkeep  LICENSE  PROJECT_REPORT.md  README.md  data_sources.md  main.py  pyproject.toml
data/: features.md
models/xgboost_n2o/: xgboost_n2o_model.joblib
notebooks/: README.md  build_landuse_interim_dataset.ipynb  first_look.ipynb  n2o_eda.ipynb  n2o_xgboost_modelbuildingv.ipynb
src/: README.md  alignment.py  convert_pangaea_textfile.py  download_pangaea_data.py  preprocess_interim_data.py  schema.py
src/n2o_ml/: evaluation.py  feature_engineering.py  io.py  model_io.py  model_selection.py  preprocessing.py  target_transform.py  xgboost_io.py
