[project]
name = "n2o-emissions-africa"
version = "0.1.0"
description = "Machine learning project for modeling nitrous oxide emissions across African ecosystems using open PANGAEA research data."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.3.0,<3.0.0",
    "requests>=2.32.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]